--- a/src/index.html
+++ b/src/index.html
@@ -666,6 +666,9 @@
                 <a href="./img/team-5.png" class="inline" data-gallery>
                   <img src="./img/team-5.png" class="img-thumbnail" style="height:128px;">
                 </a>
+                <a href="./img/team-7.png" class="inline" data-gallery>
+                  <img src="./img/team-7.png" class="img-thumbnail" style="height:128px;">
+                </a>
               </div>
             </div>
           </div>
