--- a/src/index_en.html
+++ b/src/index_en.html
@@ -108,11 +108,17 @@
 
               <hr>
               <h4>Discussion</h4>
-              <p>This article discusses that tax is the intersection of all participants in the market or society, also the unity of distribution tool and value measure. So, it is needful and feasible to establish a system: </p>
-              <p>Symmetric Value and Credit Talent named Tax/Fin. Trone (Chains) which weighs/measures the value or credit by the following functional equation: </p>
-              <p>T(x,y)*= Lg x(tax)* + x(tax)/y(relative value of tax) (%) … errata( erring stain record )</p>
-              <p>Where T denotes tax, x denotes the tax category and amount,  y denotes the relative value of tax (or the comparable data series with tax, such as comparable goods, logistics and invoice, sales, cost, income, etc.),  errata denotesthe erring stain record. </p>
-              <p>That is to say, we establish a value and credit system through a counteracting institution which balances  financial accountingdata or other factors by tax, assesses and adjuststhe participant’s  condition (includingfinance,account,wealth, credit,quality，rights，duties, etc.) matching with taxation, further distinguishes good from evil，enhances goodness and chastise evil, which  aims to mitigate information asymmetry, and leads a healthy value orientation, then improve upon the market and society.</p>
+              <div>
+                <a href="./img/en/discussion.png" style="margin-right:20px;" class="inline pull-left" data-gallery>
+                  <img class="lazy" data-original="./img/en/discussion.png" class="img-thumbnail" style="width:256px;">
+                </a>
+                <p>This article discusses that tax is the intersection of all participants in the market or society, also the unity of distribution tool and value measure. So, it is needful and feasible to establish a system: </p>
+                <p>Symmetric Value and Credit Talent named Tax/Fin. Trone (Chains) which weighs/measures the value or credit by the following functional equation: </p>
+                <p>T(x,y)*= Lg x(tax)* + x(tax)/y(relative value of tax) (%) … errata( erring stain record )</p>
+                <p>Where T denotes tax, x denotes the tax category and amount,  y denotes the relative value of tax (or the comparable data series with tax, such as comparable goods, logistics and invoice, sales, cost, income, etc.),  errata denotesthe erring stain record. </p>
+                <p>That is to say, we establish a value and credit system through a counteracting institution which balances  financial accountingdata or other factors by tax, assesses and adjuststhe participant’s  condition (includingfinance,account,wealth, credit,quality，rights，duties, etc.) matching with taxation, further distinguishes good from evil，enhances goodness and chastise evil, which  aims to mitigate information asymmetry, and leads a healthy value orientation, then improve upon the market and society.</p>
+                <div class="clearfix"></div>
+              </div>
 
               <hr>
               <h4>Course</h4>
@@ -376,16 +382,15 @@
                 <a href="./img/en/mac-2.png" style="margin-right:20px;" class="inline pull-left" data-gallery>
                   <img class="lazy" data-original="./img/en/mac-2.png" class="img-thumbnail" style="width:256px;">
                 </a>
-                <p>T(x)*G(y)=Vt(absolute value of tax)+V(relative value of tax) </p>
-                <p>…Errata[erring stain record]Equation </p>
-                <p>=Lgx[tax(thousand)]*G(y)[x(tax)/y(relative value of tax)(%)</p>
-                <p>…Errata[erring credit]Equation </p>
+                <p>T(x) * G(y) = Vt ( absolute value of tax ) + V ( relative value of tax ) … Errata [ erring stain record ]</p>
+                <p> = Lgx[ tax(thousand) ] * G(y)[ x(tax) / y ( relative value of tax ) (%) … Errata [ erring credit ]</p>
                 <div class="clearfix"></div>
               </div>
-              <p>Where T denotes tax,and X denotes the tax category and amount[such as t(turnover tax), r(property and resource tax), i(income tax), s(social security tax), o(other tax),whole tax (nonuse symbols)].</p>
-              <p>y denotes the relative value of tax[ the comparable data series with taxation such aslogistics and fund Flow, information flow,Invoicechain, Internet of things，etc.Orthe relative financial accounting informationwith x(tax) such ascomparable as(asset), cp(capital), eq(equity), it(interest), lb(liabilities), tr(turnover or revenue), vl(value), bs(business), cs(cost), es(energy source),  gd(goods), ic(income), mt(materials), ps(person), pr(property and resource), tc(technology), whole factors(nonuse symbols), etc. ]</p>
-              <p>* (asterisk) denotes star level. G denotes grade, and G(y) denotes the grade of x/y (%).</p>
-              <p>Errata[erring credit]denotes the index of Special Tax Adjustments [Lgtax-adjustment(thousand)] concerning vicious finance such as duty evasion,  fraud, bribe，penalty，and other unscrupulous income or expense.</p>
+
+              <p>Where T denotes tax, and X denotes the tax category and amount [ such as revenue (turnover) tax,  property and resource tax,  income tax, social security tax,  other tax,  whole tax ].</p>
+              <p>y denotes the relative value of tax [ the comparable data series with taxation  such as logistics and fund flow, information flow, invoice chain, internet of things，etc.  Or the relative financial accounting information with x(tax) such as comparable assets, capital,  equity,  interest,  liabilities,   turnover or revenue,   value,  business,  cost,  energy source,  goods,  income,  materials, person,  property and resource,  technology, whole factors, etc. ]</p>
+              <p>* (asterisk) denotes star level.  G denotes grade, and G(y) denotes the grade of x/y (%).</p>
+              <p>Errata [erring credit] denotes the index of Special Tax Adjustments [ Lgtax-adjustment(thousand) ]  concerning vicious finance such as duty evasion,  fraud, bribe，penalty，and other unscrupulous  income or expense.</p>
 
               <hr>
               <h4>Score 财赋资信的计算</h4>
@@ -393,27 +398,26 @@
                 <a href="./img/en/mac-3.png" style="margin-right:20px;" class="inline pull-left" data-gallery>
                   <img class="lazy" data-original="./img/en/mac-3.png" class="img-thumbnail" style="width:256px;">
                 </a>
+
                 <p>For example:</p>
-                <p>In thousands of USD (K for short),assume that Factory Arealized A goods turn over 800 during a period , and paid or assumed tax 100[includingT(t): turn over tax 50 composed ofinput VAT of raw materials 30 and outputVAT of sales 20, T(s): social security tax 10, T(r): resource tax 10,  T(i): income tax 20, T(o): other tax 10]at the same time. Other than that, the Special Tax Adjustments concerning vicious finance is 10 (Note: the victim needs to reduce the tax payment for the adjustment). Then:</p>
-                <p>T(x)*G(y)= Lg[x(tax)] *x(tax)/y [relative ](%)…Errata[ erring credit ]</p>
-                <p>T(x)*G(tr)= Lg[x(tax)(K)] * x(tax)/tr[relative (turnover)](%)…Errata[ erring credit ]</p>
-                <p>=Lg100(K) *100/800(tr)(%)…Lg[ (Special Tax Adjustments)10(K)]</p>
-                <p>= Lg10<sup>2</sup>(K) * 12.5(tr) (%) … Lg101(K)</p>
-                <p>=2*(K)12.5(tr) … 1(*)</p>
+                <p>In thousands of USD (K for short), assume that Factory A realized A goods revenue (turnover) 800 during a period , and paid or assumed tax 100 [revenue (turnover) tax 50 , social security tax 10, income tax 20,  other tax 20]. Other than that, the Special Tax Adjustments concerning vicious finance is 10  (Note: the victim needs to reduce the tax payment for the adjustment).  Then:</p>
+                <p>T(x)*G(y)= Lg[x(tax)] * x(tax)/y [relative ](%)…E[ erring credit ]</p>
+                <p>T(x)*G(tr)= Lg[x(tax)(K)] * x(tax)/tr[relative  revenue or turnover](%) … E[ erring credit ]</p>
+                <p>=Lg100(K) *100/800(tr)(%) …E: Lg[ (Special Tax Adjustments)10(K)]</p>
+                <p>= Lg10<sup>2</sup>(K) * 12.5(tr) (%) … E: Lg101(K)</p>
+                <p>=2*(K)12.5(tr) … E 1(*)</p>
                 <p>Read as：2Star, 12.5(tr)rating…Erring credit: 1 BlackStar.</p>
+
                 <div class="clearfix"></div>
               </div>
 
-              <p>Likewise, we can calculate: T[x, t(turnover tax), s(social security tax), r(property and resource tax), i(income tax), o(other tax)…]*G[y, as(asset), cp(capital), eq(equity), it(interest), lb(liabilities), tr(turnover), vl(value), … ].</p>
-              <p>Vt represents the absolute value of tax——the amount (or order of magnitude) thattaxpayer pays; V(y) represents relative value of tax, or the grade of x(tax)/y(relative quantity) (%);errata[ erring credit] represents the index of Special Tax Adjustmentsconcerningerring stain record.Together, they constitute the measure chains of tax/fin. for all of the market participants.</p>
               <p>Also because of the symmetric relationship between tax and certain proportions of finance (or other factors), when financial manipulation or adverse circumstancesoccurs, the system can reveal or control it symmetricallyin a way.</p>
-              <p>For example, in the case above, assume thatbecause of financial manipulation or other reason, the turnoverfigure becomes $8000K from $800K andalmost nothing else changes.Well then,the relative valueof G(tr)declines instead of increasing from 12.5(r)(%) to 1.25(r)(%). </p>
-              <p>∵G(tr)= x(tax)/tr(turnover)(%)</p>
-              <p>∴(Normal) G(tr)= 100/800=12.5(t)(%).</p>
-              <p>(Particular)G’(tr)= 100/8000=1.25(t)(%).</p>
+              <p>For example, in the case above, assume that because of financial manipulation or other reason, the turnover figure becomes $8000K from $800K and almost nothing else changes. Well then, the relative valueof G(tr)declines instead of increasing from 12.5(r)(%) to 1.25(r)(%). </p>
+              <p>∵G(tr)= x(tax)/tr(revenue or turnover)(%)</p>
+              <p>∴(Normal) G(tr)= 100/800=12.5 (%).</p>
+              <p>(Particular)G’(tr)= 100/8000=1.25 (%).</p>
               <p>Deviationrate=(Normal) G(tr) / (Particular) G’(tr) (%)=12.5 /1.25(%)=1000 (%).</p>
-              <p>It reflects obviouslythat Factory A may have serious problemssuch as manipulation and fraud, or operating condition, or product quality, etc.</p>
-
+              <p>It reflects obviously that Factory A may have serious problemssuch as manipulation and fraud, or operating condition, or product quality, etc.</p>
 
               <hr>
               <h4>Constellation</h4>
@@ -434,7 +438,7 @@
               Application
             </div>
             <div class="panel-body">
-              <p>In 2007—2008, This system was originated. Since then, it is rapidly spread and applied in the world in different ways, including softwares such as Online or Wechat for ordinary participants and listed companies, providing data of  T(x,y)* analysis on forty thousandEast Asia and North Americafirms.</p>
+              <p>In 2007—2008,  This system was originated. Since then, it is rapidly spread and applied in the world in different ways, including softwares such as Online or Wechat for ordinary participants and listed companies, providing data of analysis on fifty thousand listed companies and millions ordinary firms.</p>
               <p>Its principle has become a credit standard by Chinese government and banks (SAT Issue No.96, 2015, No.156, 2015) .</p>
               <div class="text-center">
                 <a href="./img/adv-2.png" class="inline" data-gallery>
