--- a/src/index_en.html
+++ b/src/index_en.html
@@ -41,7 +41,7 @@
         <div class="col-sm-10">
           <h1>ISOTAF, 国际对称性财赋资信系统(税务资信)</h1>
           <h2>ISO  Symmetric Value and Credit Talent: Tax/Fin. Link</h2>
-          <h4 class="text-right">Provide the platform for credibility,  value brand-names,  rights,  duties,  business, etc.</h4>
+          <h4 class="text-right">Providing the platform for credibility,  value brand-names,  rights,  duties,  business, etc.</h4>
         </div>
 
 
