--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,7 @@
     <title>国赋资信</title>
 
     <!-- Bootstrap -->
-    <link  href="../node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <link href="../node_modules/blueimp-gallery/css/blueimp-gallery.min.css" rel="stylesheet">
-    <link href="./css/docs.css" rel="stylesheet">
     <link href="./css/app.css" rel="stylesheet">
     <style>
     .thumb128 {
@@ -55,7 +45,7 @@
               <li>
                 <a href="#case">目录</a>
                 <ul class="nav">
-                  <li><a href="#case">案例分析</a></li>
+                  <li><a href="#case"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>案例分析</a></li>
                   <li><a href="#background">背景介绍</a></li>
                   <li><a href="#theory">理论基础</a></li>
                   <li><a href="#machine">解决机制</a></li>
